[package]
name = "rumap"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = { version = "2.18.2", features = ["xlib"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
itertools = "0.9"