[package]
name = "linux"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "linux"
path = "src/lib.rs"

[dependencies]
mapper = { path = "../mapper" }

x11 = { version = "2.18.2", features = ["xlib"] }
lazy_static = "1.4.0"
itertools = "0.9"
serde_json = "1.0"
log = "*"
flexi_logger = "0.15.2"

[dev-dependencies]
speculate = "0.1"
maplit = "1.0.2"
